Added basic content

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -25,10 +25,53 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section>
+      <img src="" alt="hero image">
+      <h1>Title</h1>
+    </section>
+
+    <aside>
+      <input type="text" name="name" value="email address">
+      <input type="button" value="Download Itinerary">
+    </aside>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer'content">
+        <div class="contact">
+          <address>
+            <div class="social">
+              <div class="social-icons">
+                <p><a href="https://www.facebook.com/brainybdh" target="_blank">Facebook</a></p>
+              </div>
+            </div>
+          </address>
+        </div>
+
+      </div>
+    </div>
+    <div class="copyright"></div>
+  </footer>
+
+  <!-- links -->
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
