--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
       <a href="#"><img src="" alt="unplugged logo"></a>
@@ -39,34 +38,106 @@
   </header>
 
   <main>
-    <section>
-      <img src="" alt="hero image">
-      <h1>Title</h1>
+    <!-- hero area -->
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+        <img src="#" alt="background image">
+      </div>
     </section>
 
+
     <aside>
-      <input type="text" name="name" value="email address">
-      <input type="button" value="Download Itinerary">
+      <div class="form-description">
+        <img src="" alt="hero image">
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      </div>
+      <div class="form">
+        <h3>Find out more</h3>
+        <form action="">
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </form>
+      </div>
     </aside>
+    <section class="features">
+      <div class="content-wrapper">
+        <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
+              get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstaclee courses, including private beach 1/2 mile from
+              bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
+              breakout
+              rooms.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h1>Be a better team in 5 days, like these.</h1>
+        <h3>LaCrue Bottling Co.</h3>
+        <h3>October 2017</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nisi dapibus, sollicitudin nunc ut, mattis
+          sapien.
+          Nam et tincidunt tortor, ac lobortis turpis. Nulla quis purus vel mauris luctus.</p>
+      </div>
+    </section>
   </main>
 
   <footer>
     <div class="content-wrapper">
-      <div class="footer'content">
-        <div class="contact">
-          <address>
-            <div class="social">
-              <div class="social-icons">
-                <p><a href="https://www.facebook.com/brainybdh" target="_blank">Facebook</a></p>
-              </div>
-            </div>
-          </address>
-        </div>
+      <div class="footer-content">
+        <address>
 
+          <div class="contact">
+            <h3>Contact</h3>
+            <p>555-555-5555</p>
+            <a href="hello@unplugged.com">hello@unplugged.com</a>
+          </div>
+
+          <div class="social">
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/brainybdh" target="_blank">Facebook</a></p>
+            </div>
+          </div>
+
+          <div class="copyright">
+            <p>Copyright 2015 | Unplugged</p>
+          </div>
+
+        </address>
       </div>
     </div>
-    <div class="copyright"></div>
+
+    <div class="copyright">
+    </div>
   </footer>
+
 
   <!-- links -->
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
