Added About page content

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -45,8 +45,7 @@
         <img src="#" alt="background image">
       </div>
     </section>
-
-
+    <!-- signup -->
     <aside>
       <div class="form-description">
         <img src="" alt="hero image">
@@ -61,6 +60,7 @@
         </form>
       </div>
     </aside>
+    <!-- features -->
     <section class="features">
       <div class="content-wrapper">
         <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
@@ -97,6 +97,7 @@
         </div>
       </div>
     </section>
+    <!-- reviews -->
     <section class="reviews">
       <div class="content-wrapper">
         <h1>Be a better team in 5 days, like these.</h1>
@@ -140,9 +141,9 @@
 
 
   <!-- links -->
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
