--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,102 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- mission -->
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tristique est at malesuada bibendum.
+            Sed velit dolor, tincidunt eu consequat eu, faucibus quis sapien. Donec sit amet gravida mauris.
+            Morbi commodo mollis iaculis. Integer eu est diam. Class aptent taciti sociosqu ad litora torquent
+            per conubia nostra, per inceptos himenaeos. Vivamus est purus, consequat vel mattis et, lobortis
+            non augue. Phasellus tempus maximus turpis, id aliquet justo aliquet scelerisque. Etiam efficitur
+            mi quis elementum consequat. Proin egestas luctus ex id auctor. Pellentesque habitant morbi tristique
+            senectus et netus et malesuada fames ac turpis egestas. Donec in volutpat dolor. Donec pretium, mauris
+            vitae vestibulum viverra, nunc sapien cursus magna, a congue nisi nisi in lectus. Aliquam semper massa
+            vitae ultricies ultricies.</p>
+          <p>Aenean volutpat tellus a odio pellentesque, at condimentum eros faucibus. Nam vehicula ex ante, vitae
+            sollicitudin ex condimentum non. Ut vitae risus quis mi eleifend commodo at eget nunc. Curabitur tristique
+            orci elit, in cursus eros porta et. Donec in scelerisque nulla, sit amet maximus enim. In pretium lectus
+            in orci pellentesque euismod. Cras augue nisi, semper eget eros quis, fermentum rutrum elit. Morbi sit
+            amet efficitur nibh, vel faucibus nunc. Ut tristique elit ut mauris iaculis, sit amet hendrerit urna
+            aliquam.</p>
+        </div>
+      </div>
+    </section>
+    <!-- map -->
+    <section class="map">
+      <figure>
+
+      </figure>
+    </section>
+    <!-- contact -->
+    <section class="contact">
+      <div class="content-wrapper">
+        <address>
+          <div>
+            <h3>General Information</h3>
+            <p>333 Main St. Lake Geneva, WI 53147</p>
+            <p>555-555-5555</p>
+            <p>hello@unplugged.com</p>
+          </div>
+          <div>
+            <h3>Chat with a Facilitator</h3>
+            <p>555-555-5555</p>
+            <p>facilitator@unplugged.com</p>
+          </div>
+        </address>
+      </div>
+      <h1>Contact us, because you all need this.</h1>
+      
+    </section>
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address>
+
+          <div class="contact">
+            <h3>Contact</h3>
+            <p>555-555-5555</p>
+            <a href="hello@unplugged.com">hello@unplugged.com</a>
+          </div>
+
+          <div class="social">
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/brainybdh" target="_blank">Facebook</a></p>
+            </div>
+          </div>
+
+          <div class="copyright">
+            <p>Copyright 2015 | Unplugged</p>
+          </div>
+
+        </address>
+      </div>
+    </div>
+
+    <div class="copyright">
+    </div>
+  </footer>
+
+
+  <!-- PLUGINS -->
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
