--- a/faq/index.html
+++ b/faq/index.html
@@ -17,7 +17,8 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css//main.css">
+  <link rel="stylesheet" href="../css/faq/styles.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -30,95 +31,72 @@
       <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
+        <a href="faq/index.html" target="_blank">FAQ</a>
+        <a href="about/index.html" target="_blank">About</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <!-- mission -->
+    <!-- questions -->
     <section class="questions">
       <div class="content-wrapper">
         <h1>Frequently Asked Questions</h1>
-        <div>
-          <h3>How do I get to the Unplugged retreat?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris congue purus id laoreet fringilla.
-            Maecenas non leo feugiat, luctus diam eu, posuere nibh. Quisque sollicitudin.</p>
-        </div>
-        <div>
-          <h3>What kind of team is right for the Unplugged retreat?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor elementum ultrices.
-            Pellentesque dignissim in metus eu bibendum. Ut urna odio, scelerisque a rhoncus ac.</p>
-        </div>
-        <div>
-          <h3>What size teams can you accommodate?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sapien tellus, posuere eu
-            tincidunt vel, lobortis ac nulla. Cras porta molestie tellus et posuere. Suspendisse.</p>
-        </div>
-        <div>
-          <h3>Is there really no wifi available?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis tincidunt erat, eget pretium
-            turpis varius id. Morbi sodales pellentesque orci, eget iaculis purus feugiat.</p>
-        </div>
-      </div>
-    </section>
-    <!-- map -->
-    <section class="map">
-      <figure>
-
-      </figure>
-    </section>
-    <!-- contact -->
-    <section class="contact">
-      <div class="content-wrapper">
-        <address>
+        <div class="questions-content">
           <div>
-            <h3>General Information</h3>
-            <p>333 Main St. Lake Geneva, WI 53147</p>
-            <p>555-555-5555</p>
-            <p>hello@unplugged.com</p>
+            <h3>How do I get to the Unplugged retreat?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris congue purus id laoreet fringilla.
+              Maecenas non leo feugiat, luctus diam eu, posuere nibh. Quisque sollicitudin.</p>
           </div>
           <div>
-            <h3>Chat with a Facilitator</h3>
-            <p>555-555-5555</p>
-            <p>facilitator@unplugged.com</p>
+            <h3>What kind of team is right for the Unplugged retreat?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor elementum ultrices.
+              Pellentesque dignissim in metus eu bibendum. Ut urna odio, scelerisque a rhoncus ac.</p>
           </div>
-        </address>
-      </div>
-      <h1>Contact us, because you all need this.</h1>
+          <div>
+            <h3>What size teams can you accommodate?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sapien tellus, posuere eu
+              tincidunt vel, lobortis ac nulla. Cras porta molestie tellus et posuere. Suspendisse.</p>
+          </div>
+          <div>
+            <h3>Is there really no wifi available?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mollis tincidunt erat, eget pretium
+              turpis varius id. Morbi sodales pellentesque orci, eget iaculis purus feugiat.</p>
+          </div>
+        </div>
 
+      </div>
     </section>
   </main>
 
   <footer>
     <div class="content-wrapper">
-      <div class="footer-content">
-        <address>
+      <address>
+        <div class="contact">
+          <h3>Contact</h3>
+          <p>555-555-5555</p>
+          <a href="hello@unplugged.com">hello@unplugged.com</a>
+        </div>
 
-          <div class="contact">
-            <h3>Contact</h3>
-            <p>555-555-5555</p>
-            <a href="hello@unplugged.com">hello@unplugged.com</a>
-          </div>
-
-          <div class="social">
+        <div class="social">
+          <h3>Social</h3>
+          <div class="social-content">
             <div class="social-icons">
-              <p><a href="https://www.facebook.com/brainybdh" target="_blank">Facebook</a></p>
+              <p><a href="https://www.facebook.com" target="_blank">F</a></p>
+            </div>
+            <div class="social-icons">
+              <p><a href="https://www.twitter.com" target="_blank">T</a></p>
+            </div>
+            <div class="social-icons">
+              <p><a href="https://www.instigram.com" target="_blank">I</a></p>
             </div>
           </div>
 
-          <div class="copyright">
-            <p>Copyright 2015 | Unplugged</p>
-          </div>
-
-        </address>
+        </div>
+      </address>
+      <div class="copyright">
+        <p>Copyright 2015 | Unplugged</p>
       </div>
-    </div>
-
-    <div class="copyright">
     </div>
   </footer>
 
