--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
       <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
+        <a href="faq/index.html" target="_blank">FAQ</a>
+        <a href="about/index.html" target="_blank">About</a>
       </nav>
     </div>
   </header>
@@ -45,10 +43,10 @@
         <img src="#" alt="background image">
       </div>
     </section>
+
     <!-- signup -->
     <aside>
       <div class="form-description">
-        <img src="" alt="hero image">
         <h3>Want to join the next retreat?</h3>
         <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
       </div>
@@ -99,43 +97,49 @@
     </section>
     <!-- reviews -->
     <section class="reviews">
+      <h1>Be a better team in 5 days, like these.</h1>
       <div class="content-wrapper">
-        <h1>Be a better team in 5 days, like these.</h1>
-        <h3>LaCrue Bottling Co.</h3>
-        <h3>October 2017</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nisi dapibus, sollicitudin nunc ut, mattis
-          sapien.
-          Nam et tincidunt tortor, ac lobortis turpis. Nulla quis purus vel mauris luctus.</p>
+        <div class="imgs">
+          <img src="" alt="group-photo">
+        </div>
+        <div class="reviews-content">
+          <h3>LaCrue Bottling Co.</h3>
+          <h3>October 2017</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nisi dapibus, sollicitudin nunc ut,
+            mattis sapien. Nam et tincidunt tortor, ac lobortis turpis. Nulla quis purus vel mauris luctus.</p>
+        </div>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="content-wrapper">
-      <div class="footer-content">
-        <address>
+      <address>
+        <div class="contact">
+          <h3>Contact</h3>
+          <p>555-555-5555</p>
+          <a href="hello@unplugged.com">hello@unplugged.com</a>
+        </div>
 
-          <div class="contact">
-            <h3>Contact</h3>
-            <p>555-555-5555</p>
-            <a href="hello@unplugged.com">hello@unplugged.com</a>
-          </div>
-
-          <div class="social">
+        <div class="social">
+          <h3>Social</h3>
+          <div class="social-content">
             <div class="social-icons">
-              <p><a href="https://www.facebook.com/brainybdh" target="_blank">Facebook</a></p>
+              <p><a href="https://www.facebook.com" target="_blank">F</a></p>
+            </div>
+            <div class="social-icons">
+              <p><a href="https://www.twitter.com" target="_blank">T</a></p>
+            </div>
+            <div class="social-icons">
+              <p><a href="https://www.instigram.com" target="_blank">I</a></p>
             </div>
           </div>
 
-          <div class="copyright">
-            <p>Copyright 2015 | Unplugged</p>
-          </div>
-
-        </address>
+        </div>
+      </address>
+      <div class="copyright">
+        <p>Copyright 2015 | Unplugged</p>
       </div>
-    </div>
-
-    <div class="copyright">
     </div>
   </footer>
 
