finished adding styles

--- a/faq/index.html
+++ b/faq/index.html
@@ -26,16 +26,31 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <header>
-    <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
-      <div class="header-divider"></div>
-      <nav>
-        <a href="faq/index.html" target="_blank">FAQ</a>
-        <a href="about/index.html" target="_blank">About</a>
-      </nav>
-    </div>
-  </header>
+
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
+    <meta name="theme-color" content="#fafafa">
+  </head>
 
   <main>
     <!-- questions -->
