--- a/about/index.html
+++ b/about/index.html
@@ -17,8 +17,9 @@
   <!-- Place favicon.ico in the root directory -->
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/about/styles.css">
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
@@ -31,7 +32,7 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <h1>Unplugged</h1>
       <div class="header-divider"></div>
       <nav>
         <a href="faq/index.html" target="_blank">FAQ</a>
@@ -66,8 +67,8 @@
     </section>
     <!-- contact -->
     <section class="contact">
-      <h1>Contact us, because you all need this.</h1>
       <div class="content-wrapper">
+        <h1>Contact us, because you all need this.</h1>
         <address>
           <div>
             <!-- <h3>General Information</h3> -->
@@ -89,7 +90,7 @@
   <footer>
     <div class="content-wrapper">
       <address>
-        <div class="contact">
+        <div class="footer-contact">
           <h3>Contact</h3>
           <p>555-555-5555</p>
           <a href="hello@unplugged.com">hello@unplugged.com</a>
