--- a/faq/index.html
+++ b/faq/index.html
@@ -25,32 +25,16 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-
-    <!-- FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-
-    <meta name="theme-color" content="#fafafa">
-  </head>
+  <header>
+    <div class="content-wrapper">
+      <h1>Unplugged</h1>
+      <div class="header-divider"></div>
+      <nav>
+        <a href="faq/index.html" target="_blank">FAQ</a>
+        <a href="about/index.html" target="_blank">About</a>
+      </nav>
+    </div>
+  </header>
 
   <main>
     <!-- questions -->
@@ -87,7 +71,7 @@
   <footer>
     <div class="content-wrapper">
       <address>
-        <div class="contact">
+        <div class="footer-contact">
           <h3>Contact</h3>
           <p>555-555-5555</p>
           <a href="hello@unplugged.com">hello@unplugged.com</a>
