--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+  <!-- images -->
+
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -30,7 +33,7 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <h1>Unplugged</h1>
       <div class="header-divider"></div>
       <nav>
         <a href="faq/index.html" target="_blank">FAQ</a>
@@ -44,7 +47,6 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
-        <img src="#" alt="background image">
       </div>
     </section>
 
@@ -101,17 +103,17 @@
     </section>
     <!-- reviews -->
     <section class="reviews">
-      <h1>Be a better team in 5 days, like these.</h1>
       <div class="content-wrapper">
-        <div class="imgs">
-          <img src="" alt="group-photo">
-        </div>
-        <div class="reviews-content">
-          <h3>LaCrue Bottling Co.</h3>
-          <h3>October 2017</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nisi dapibus, sollicitudin nunc ut,
-            mattis sapien. Nam et tincidunt tortor, ac lobortis turpis. Nulla quis purus vel mauris luctus.</p>
-        </div>
+        <h1>Be a better team in 5 days, like these.</h1>
+        <article>
+          <div class="imgs"></div>
+          <div class="reviews-content">
+            <h2>LaCrue Bottling Co.</h2>
+            <h2>October 2020</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nisi dapibus, sollicitudin nunc ut,
+              mattis sapien. Nam et tincidunt tortor, ac lobortis turpis. Nulla quis purus vel mauris luctus.</p>
+          </div>
+        </article>
       </div>
     </section>
   </main>
@@ -119,7 +121,7 @@
   <footer>
     <div class="content-wrapper">
       <address>
-        <div class="contact">
+        <div class="footer-contact">
           <h3>Contact</h3>
           <p>555-555-5555</p>
           <a href="hello@unplugged.com">hello@unplugged.com</a>
