Added Logo and links

--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <h1>Unplugged</h1>
+      <a href="../index.html">
+        <img src="../img/unpluggedlogo.png" alt="logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <a href="faq/index.html" target="_blank">FAQ</a>
