--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,9 @@
 
   <header>
     <div class="content-wrapper">
-      <h1>Unplugged</h1>
+      <a href="../index.html">
+        <img src="../img/unpluggedlogo.png" alt="logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <a href="faq/index.html" target="_blank">FAQ</a>
