Added best buy google maps

--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,10 @@
     <!-- map -->
     <section class="map">
       <figure>
-
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.59112543803528!2d-97.42698444326858!3d32.806627537334705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e74da72e9c553%3A0x7f8a7c4a0966d307!2sBest%20Buy!5e0!3m2!1sen!2sus!4v1637700006483!5m2!1sen!2sus"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
       </figure>
     </section>
     <!-- contact -->
