--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="index.html">
-        <img src="img/unpluggedlogo.png" alt="logo">
-      </a>
+      <figure>
+        <a href="index.html">
+          <img src="img/unpluggedlogo.png" alt="logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <a href="faq/index.html" target="_blank">FAQ</a>
