--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
-  <!-- images -->
+  <!-- icon fonts -->
+  <script src="https://kit.fontawesome.com/8d4052a3da.js" crossorigin="anonymous"></script>
 
 
   <meta name="theme-color" content="#fafafa">
@@ -74,33 +75,33 @@
         <h1>Have the work week you always dreamed of - without the bad wifi.</h1>
         <div class="features-items">
           <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+            <p class="fontawesome-icon"><i class="fas fa-campground"></i></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
-              get a chance to reset.</p>
-          </article>
-          <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">5 outdoor obstaclee courses, including private beach 1/2 mile from
-              bungalow.</p>
-          </article>
-          <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Private chef team providing on demand meals - just like your team
-              kitchen.</p>
-          </article>
-          <article>
-            <p class="fontawesome-icon"></p>
+            <p class="fontawesome-icon"><i class="fas fa-bed"></i></p>
             <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4
               breakout
               rooms.</p>
           </article>
           <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+            <p class="fontawesome-icon"><i class="fas fa-utensils"></i></p>
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team
+              kitchen.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"><i class="fas fa-shoe-prints"></i></p>
+            <p class="features-item-description">5 outdoor obstaclee courses, including private beach 1/2 mile from
+              bungalow.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"><i class="fas fa-smile"></i></p>
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all
+              get a chance to reset.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"><i class="fas fa-wifi"></i></p>
+            <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
           </article>
         </div>
       </div>
