--- a/index.html
+++ b/index.html
@@ -136,13 +136,21 @@
           <h3>Social</h3>
           <div class="social-content">
             <div class="social-icons">
-              <p><a href="https://www.facebook.com" target="_blank">F</a></p>
+              <p><a href="https://www.facebook.com" target="_blank">
+                <i class="fab fa-facebook-f
+                "></i>
+              </a></p>
             </div>
             <div class="social-icons">
-              <p><a href="https://www.twitter.com" target="_blank">T</a></p>
+              <p><a href="https://twitter.com/" target="_blank">
+                <i class="fab fa-twitter
+                "></i>
+              </a></p>
             </div>
             <div class="social-icons">
-              <p><a href="https://www.instigram.com" target="_blank">I</a></p>
+              <p><a href="https://www.instagram.com/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a></p>
             </div>
           </div>
 
